# pykinml

./: LICENSE  README.md  pyproject.toml
ensemble/: 2023_10_11.csv  comp_r0-0150.pt  comp_r2-0150.pt  comp_r4-0150.pt  comp_r6-0150.pt  comp_r8-0150.pt
examples/: README  args.json  c5h5.xyz  freq_calc.py  freq_calc_ts.py  load_model.py  mf_tvt.txt  out.load_model  out.train_delta  out.train_multi_fid  out.train_single_fid  run_model.py  sample_tvt.txt  train_a_model.py  train_delta.py  train_multi_fid.py  train_multi_node.py  train_single_fid.py  ts_to_opt.xyz
examples/data_holder/: C2H2.db  C2H3.db  C3H2.db  C3H3.db  C5H5.db
pykinml/: README  aev.py  daev.py  data.py  hdf5_handler.py  model_calculator.py  multi_fid_loop.py  nnpes.py  prepper.py  rdb.py  trainer.py
